--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,28 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.Tic-Tac-Toe {
   display: flex;
-  flex-direction: column;
+  /* align-content: center; */
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 100%;
+  height: 100%;
+  /* background-color: aqua; */
+}
+.Tic-Tac-Toe_container {
+  width: 50%;
+  height: 50%;
+  display: flex;
+  flex-wrap: wrap;
 }
 
-.App-link {
-  color: #61dafb;
+.Tic-Tac-Toe_container div {
+  width: 30%;
+  height: 60px;
+  border: solid 2px black;
+  font-size: 2rem;
+  /* background-color: aqua; */
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Tic-Tac-Toe_container-content-1 {
+  border-bottom: none;
+  border-right: none;
 }
