added player counting headers

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,25 @@
+.Main {
+  /* width: 100%; */
+  /* height: 100vh; */
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-content: center;
+  background-color: white;
+}
+.Window {
+  width: 80%;
+  height: 700px;
+  background-color: antiquewhite;
+}
+.playersTurn {
+  align-content: center;
+  display: flex;
+}
 .Tic-Tac-Toe {
   display: flex;
   justify-content: center;
-  align-items: center;
+  /* align-items: center; */
   /* display: block; */
   width: 100vw;
   height: 100vh;
@@ -31,48 +49,6 @@
   border-radius: 20px;
 }
 
-/* .Tic-Tac-Toe_container::before {
-  content: "";
-  position: absolute;
-  top: 50%;
-  left: 5%;
-  right: 0;
-  width: 90%;
-  border-top: 2px solid black;
-} */
-/* .Tic-Tac-Toe_container::after {
-  content: "";
-  position: absolute;
-  top: 5%;
-  right: 18%;
-  width: 3px;
-  height: 90%;
-  background-color: rgb(8, 245, 8);
-  transform: translateX(50%);
-} */
-
-/* .Tic-Tac-Toe_container::before {
-  content: "";
-  position: absolute;
-  top: -30px;
-  left: 50%;
-  width: 2px;
-  height: 120%;
-  background-color: black;
-  transform: translateX(-50%) rotate(45deg);
-} */
-
-/* .Tic-Tac-Toe_container::after {
-  content: "";
-  position: absolute;
-  top: -30px;
-  right: 50%;
-  width: 2px;
-  height: 120%;
-  background-color: black;
-  transform: translateX(50%) rotate(-45deg);
-}  */
-
 .Tic-Tac-Toe_container div {
   /* width: 50%; szerokość kontenera */
   /* border-top: 1px solid black; kreska poprzeczna */
@@ -83,9 +59,9 @@
   margin: 0;
   /* border: solid 2px black; */
   /* text-align: center; */
-  font-size: 4rem;
-  background-color: #4d4d4d;
-  border: 2px solid #565353;
+  font-size: 5rem;
+  background-color: transparent;
+  /* border: 2px solid #565353; */
   float: left;
   font-size: 46px;
   font-weight: bold;
@@ -102,6 +78,53 @@
   align-items: center;
   /* background-color: aqua; */
 }
+
+.Tic-Tac-Toe_container div {
+  border: 7px solid rgba(0, 0, 0, 0.235);
+  border-top: none;
+  border-left: none;
+}
+
+.Tic-Tac-Toe_container div:first-child {
+  border-top: none;
+  border-left: none;
+}
+
+.Tic-Tac-Toe_container div:nth-child(3n + 1) {
+  border-left: none;
+}
+.Tic-Tac-Toe_container div:nth-child(3n) {
+  border-right: none;
+}
+
+.Tic-Tac-Toe_container div:last-child {
+  border-right: none;
+}
+.Tic-Tac-Toe_container div:nth-last-child(-n + 3) {
+  border-bottom: none;
+}
+.Tic-Tac-Toe_container div:nth-child(-n + 3) {
+  border-top: none;
+}
+/* animacje  */
+/* .Tic-Tac-Toe_container div {
+  position: relative;
+  overflow: hidden;
+} */
+
+/* .Tic-Tac-Toe_container div::before {
+  content: "O";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out;
+} */
+
+/* .Tic-Tac-Toe_container div:hover::before {
+  opacity: 1;
+} */
 
 .Tic-Tac-Toe_container-content-1 {
   border-bottom: none;
