--- a/src/App.css
+++ b/src/App.css
@@ -1,37 +1,79 @@
+:root {
+  --shadow-button: rgba(222, 218, 218, 0.05) 0px 6px 10px 0px,
+    rgba(0, 0, 0, 0.1) 0px 0px 0px 1px;
+
+  --font-color: #222831;
+  --color: #eeeeee;
+  --background-color: #00adb5;
+  --background-color-page: #393e46;
+
+  --gap: 0.5rem;
+  --radius: 0.5rem;
+
+  --font-weight: 600;
+}
 .Main {
-  /* width: 100%; */
-  /* height: 100vh; */
+  width: 100%;
+  height: 100vh;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   align-content: center;
-  background-color: white;
+  background-color: #393e46;
 }
 .Window {
   width: 80%;
-  height: 700px;
-  background-color: antiquewhite;
+  height: 600px;
+  box-shadow: 0px 0px 10px 0px var(--background-color-page);
+  background-color: #eeeeee;
+  border-radius: 1rem;
+}
+h1 {
+  text-align: center;
 }
 .playersTurn {
   align-content: center;
   display: flex;
+  justify-content: space-around;
 }
 .Tic-Tac-Toe {
   display: flex;
   justify-content: center;
+  margin-top: 2rem;
   /* align-items: center; */
   /* display: block; */
-  width: 100vw;
-  height: 100vh;
+  /* width: 100vw; */
+  /* height: 100vh; */
   /* background-color: aqua; */
 }
-.Tic-Tac-Toe button {
-  position: fixed;
-  top: 10%;
-  right: 47%;
-  width: 8rem;
-  height: 2rem;
+.contnet-Btn {
+  text-align: center;
+  margin-top: 3rem;
+}
+.Btn {
+  width: 30%;
+  height: 3rem;
+  font-size: 2rem;
+  font-weight: 700;
   border-radius: 1rem;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #393e46;
+  color: #00adb5;
+}
+.totatl-results {
+  width: 15rem;
+  height: 2.5rem;
+  border-radius: 1rem;
+  border: 1px solid #00adb5;
+  display: flex;
+  justify-content: space-around;
+  justify-items: center;
+  background-color: #393e46;
+  color: #eeeeee;
+  font-size: 1.5rem;
+  font-weight: 700;
 }
 .Tic-Tac-Toe button:hover {
   background-color: gray;
@@ -43,7 +85,6 @@
   max-height: 300px;
   display: flex;
   flex-wrap: wrap;
-  /* border-top: 2px solid black; kreska poprzeczna na górze kontenera */
   text-align: center; /* wyśrodkowanie poziome */
   position: relative; /* ustawienie pozycji kontenera jako relatywnej */
   border-radius: 20px;
@@ -80,7 +121,7 @@
 }
 
 .Tic-Tac-Toe_container div {
-  border: 7px solid rgba(0, 0, 0, 0.235);
+  border: 7px solid #393e46;
   border-top: none;
   border-left: none;
 }
