--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,8 @@
 }
 body {
   margin: 0;
-  background-color: #fff4e0;
+  color: #222831;
+  /* background-color: #fff4e0; */
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
