--- a/src/App.css
+++ b/src/App.css
@@ -5,14 +5,14 @@
   --font-color: #222831;
   --color: #eeeeee;
   --background-color: #00adb5;
-  --background-color-page: #393e46;
+  --background-color-page: #bebebe;
 
   --gap: 0.5rem;
   --radius: 0.5rem;
 
   --font-weight: 600;
 }
-.Main {
+.Content {
   width: 100%;
   height: 100vh;
   display: flex;
@@ -21,48 +21,24 @@
   align-content: center;
   background-color: #393e46;
 }
-.Window {
-  width: 80%;
-  height: 600px;
+.Content__container {
+  width: 70%;
+  height: 80%;
   box-shadow: 0px 0px 10px 0px var(--background-color-page);
   background-color: #eeeeee;
   border-radius: 1rem;
 }
-h1 {
+.Content__container-title {
   text-align: center;
 }
-.playersTurn {
+
+.Content__container-playersTurn {
   align-content: center;
   display: flex;
   justify-content: space-around;
 }
-.Tic-Tac-Toe {
-  display: flex;
-  justify-content: center;
-  margin-top: 2rem;
-  /* align-items: center; */
-  /* display: block; */
-  /* width: 100vw; */
-  /* height: 100vh; */
-  /* background-color: aqua; */
-}
-.contnet-Btn {
-  text-align: center;
-  margin-top: 3rem;
-}
-.Btn {
-  width: 30%;
-  height: 3rem;
-  font-size: 2rem;
-  font-weight: 700;
-  border-radius: 1rem;
-  justify-content: center;
-  margin-left: auto;
-  margin-right: auto;
-  background-color: #393e46;
-  color: #00adb5;
-}
-.totatl-results {
+
+.Content__container-playersTurn-totatl-results {
   width: 15rem;
   height: 2.5rem;
   border-radius: 1rem;
@@ -75,13 +51,30 @@ h1 {
   font-size: 1.5rem;
   font-weight: 700;
 }
-.Tic-Tac-Toe button:hover {
-  background-color: gray;
+
+.Content__container-totatl-results {
+  width: 15rem;
+  height: 2.5rem;
+  border-radius: 1rem;
+  border: 1px solid #00adb5;
+  display: flex;
+  justify-content: space-around;
+  justify-items: center;
+  background-color: #393e46;
+  color: #eeeeee;
+  font-size: 1.5rem;
+  font-weight: 700;
 }
-.Tic-Tac-Toe_container {
-  width: 40%;
+
+.Content__container-Tic-Tac-Toe {
+  display: flex;
+  justify-content: center;
+  margin-top: 2rem;
+}
+.Content__container-Tic-Tac-Toe-container {
+  width: 300px;
   max-width: 300px;
-  height: auto;
+  height: 300px;
   max-height: 300px;
   display: flex;
   flex-wrap: wrap;
@@ -90,19 +83,13 @@ h1 {
   border-radius: 20px;
 }
 
-.Tic-Tac-Toe_container div {
-  /* width: 50%; szerokość kontenera */
-  /* border-top: 1px solid black; kreska poprzeczna */
-  /* text-align: center; wyśrodkowanie tekstu */
+.Content__container-Tic-Tac-Toe-container div {
   width: 33.3333%;
   height: 33%;
   padding: 0;
   margin: 0;
-  /* border: solid 2px black; */
-  /* text-align: center; */
   font-size: 5rem;
   background-color: transparent;
-  /* border: 2px solid #565353; */
   float: left;
   font-size: 46px;
   font-weight: bold;
@@ -111,48 +98,64 @@ h1 {
   margin-right: -1px;
   margin-top: -1px;
   padding: 0;
-  /* text-align: center; */
   text-justify: center;
-  /* width: 100px; */
   display: flex;
   justify-content: center;
   align-items: center;
-  /* background-color: aqua; */
 }
 
-.Tic-Tac-Toe_container div {
+.Content__container-Tic-Tac-Toe-container div {
   border: 7px solid #393e46;
   border-top: none;
   border-left: none;
 }
 
-.Tic-Tac-Toe_container div:first-child {
+.Content__container-Tic-Tac-Toe-container div:first-child {
   border-top: none;
   border-left: none;
 }
 
-.Tic-Tac-Toe_container div:nth-child(3n + 1) {
+.Content__container-Tic-Tac-Toe-container div:nth-child(3n + 1) {
   border-left: none;
 }
-.Tic-Tac-Toe_container div:nth-child(3n) {
+.Content__container-Tic-Tac-Toe-container div:nth-child(3n) {
   border-right: none;
 }
 
-.Tic-Tac-Toe_container div:last-child {
+.Content__container-Tic-Tac-Toe-container div:last-child {
   border-right: none;
 }
-.Tic-Tac-Toe_container div:nth-last-child(-n + 3) {
+.Content__container-Tic-Tac-Toe-container div:nth-last-child(-n + 3) {
   border-bottom: none;
 }
-.Tic-Tac-Toe_container div:nth-child(-n + 3) {
+.Content__container-Tic-Tac-Toe-container div:nth-child(-n + 3) {
   border-top: none;
 }
-/* animacje  */
-/* .Tic-Tac-Toe_container div {
-  position: relative;
-  overflow: hidden;
-} */
 
+.Content__container-Btn-content {
+  text-align: center;
+  margin-top: 3rem;
+}
+.Content__container-Btn-content-Btn {
+  width: 30%;
+  height: 3rem;
+  font-size: 2rem;
+  font-weight: 700;
+  border-radius: 1rem;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #393e46;
+  color: #00adb5;
+  box-shadow: 0px 0px 10px 0px #030b17;
+  border: none;
+  cursor: pointer;
+}
+
+.Content__container-Btn-content-Btn:hover {
+  background-color: #00adb5;
+  color: #393e46;
+}
 /* .Tic-Tac-Toe_container div::before {
   content: "O";
   position: absolute;
@@ -161,28 +164,47 @@ h1 {
   transform: translate(-50%, -50%);
   opacity: 0;
   transition: opacity 0.5s ease-in-out;
-} */
+}
 
-/* .Tic-Tac-Toe_container div:hover::before {
+.Tic-Tac-Toe_container div::before {
   opacity: 1;
 } */
 
-.Tic-Tac-Toe_container-content-1 {
-  border-bottom: none;
-  border-right: none;
+/* animacje  */
+.Content__container-Tic-Tac-Toe-container div {
+  position: relative;
+  overflow: hidden;
 }
+
+/* .Content__container-Tic-Tac-Toe-container div::before {
+  content: "O";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out;
+}
+
+.Content__container-Tic-Tac-Toe-container div:hover::before {
+  opacity: 1;
+} */
+
 @media (max-width: 600px) {
+  .Content {
+    align-content: start;
+  }
+  .Content__container {
+    width: 100%;
+    height: 80%;
+  }
   .Tic-Tac-Toe_container {
     width: 300px;
-    max-width: 400px;
     height: 300px;
     display: flex;
     flex-wrap: wrap;
   }
-  .Tic-Tac-Toe button {
-    right: 35%;
-  }
-  .Tic-Tac-Toe_container div {
-    font-size: 2rem;
+  .Content__container-Btn-content-Btn {
+    width: 14rem;
   }
 }
